--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 test/vs2017/Debug/*
-3rd-party/*
 test/vs2017/vs2017.VC.db
 test/vs2017/vs2017.VC.VC.opendb
 test/makeLib/Debug/*
+test/vs2017/.vs/*
 
