--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,9 @@
-test/vs2017/Debug/*
-test/vs2017/vs2017.VC.db
-test/vs2017/vs2017.VC.VC.opendb
-test/makeLib/Debug/*
-test/vs2017/.vs/*
-test/makeLib/makeLib.VC.db
-test/makeLib/makeLib.VC.VC.opendb
+test/test_vs_2015/Debug/*
+test/test_vs_2015/test_vs_2015/Debug/*
+test/test_vs_2015/test_vs_2015.VC.db
+test/test_vs_2015/test_vs_2015.VC.VC.opendb
+test/test_vs_2015/.vs/*
+
+tools/compile/windows/vs_2015/vs_2015/Debug/*
+tools/compile/windows/vs_2015/vs_2015.VC.db
+tools/compile/windows/vs_2015/.vs/*
