- serialize 수정 완료 - network packet deserialize 로직 수정 - annotation 수정

--- a/test/test_vs_2015/test_vs_2015/test_vs_2015.vcxproj
+++ b/test/test_vs_2015/test_vs_2015/test_vs_2015.vcxproj
@@ -173,6 +173,7 @@
     <ClInclude Include="..\..\..\src\util\thread\Thread.h" />
     <ClInclude Include="..\..\basic\BCTest.hpp" />
     <ClInclude Include="..\..\basic\BSTest.hpp" />
+    <ClInclude Include="..\..\packet\Packet.hpp" />
     <ClInclude Include="..\..\packet\PCTest.hpp" />
     <ClInclude Include="..\..\packet\PSTest.hpp" />
   </ItemGroup>
